2006-12-08  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/gobject.scm (wrap-custom-gvalue!): New public
	macro, allows new fundamental GTypes to be represented as native
	scheme values. For example, GstIntRange as a pair of ints.
	
	* gnome/gobject/guile-gnome-gobject.h: Add gc.h so people using
	this header get everything.

	* gnome/gobject/gvalue.c (scm_init_gnome_gobject_values): Don't
	export enum and flags gtypes here, that's already done by gtype.c.
	I'm not sure if this is the right change though; it seems that all
	of the gtype:foo exports should be done in the same file. Dunno.

2006-11-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gobject-spec.scm: Use (gnome gw support g-wrap), the
	g-wrap compatibility wrapper.

	* gnome/gw/glib-spec.scm: Use (gnome gw support g-wrap), the
	g-wrap compatibility wrapper.

	* gnome/gw/support/Makefile.am (support_DATA): 
	* gnome/gw/support/g-wrap.scm: New module, (gnome gw support
	g-wrap), added to the dist. The idea is for wrapsets to have
	access to all g-wrap generics from one module.

2006-10-30  Andy Wingo  <wingo@pobox.com>

	* gnome/gobject/gc.h:
	* gnome/gobject/gc.c (scm_glib_gc_protect_object)
	(scm_glib_gc_unprotect_object): New functions, like
	scm_gc_[un]protect_object, but can be called from inside the gc's
	sweep phase.

	* gnome/gobject/gparameter.c (s_scm_gparam_to_param_struct): 
	* gnome/gobject/gvalue.c (copy_gboxed_scm, free_gboxed_scm): 
	* gnome/gobject/gobject.c (s_scm_gobject_set_data_x)
	(scm_c_gtype_instance_class_init): 
	* gnome/gobject/gclosure.c (free_closure)
	(s_scm_gclosure_primitive_new): Use scm_glib_gc_protect_object
	instead of guile's scm_gc_protect_object.

	* gnome/gobject/Makefile.am (C_FILES): Add gc.c.

2006-10-27  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/defs.scm (construct-argument-list): Don't throw
	away typespec options, like 'null-ok, when there are extras
	arguments. Fixes cases like this:
	'("GMainContext*" "context" (null-ok) (default "NULL")).
